--- a/index.html
+++ b/index.html
@@ -4,27 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment" />
-    <link rel="stylesheet" href="styles-desktop.css">
+    <link rel="stylesheet" href="css/styles-desktop.css">
     <title>Silicon</title>
   </head>
   <body>
     <div class="wrapper">
 
       <header>
-        <div class="container">
-          <span class="navbar">
-            <a href="index.html"><img src="assets/logo-dark.svg" alt="Silicon logotype"/></a>
-            <nav>
-              <a href="">Features</a>
-            </nav>
+        <nav>
+          <a href="index.html"><img src="assets/logo-dark.svg" alt="Silicon logotype"/></a>
+          <a href="">Features</a>
+        </nav>
+        <div class="header__wrapper">
+          <span id="toggle">
+            <span class="header__darkmode">Dark mode</span>
+            <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
           </span>
-          <span class="navbar">
-            <span id="toggle">
-              <span>Dark mode</span>
-              <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
-            </span>
-            <a href="" class="button button__signin"><span>Sign in / up</span></a>
-          </span>
+          <a href="" class="button button__signin"><span>Sign in / up</span></a>
         </div>
       </header>
 
@@ -38,9 +34,7 @@
                 <a href="" class="app app__appstore">Download on the AppStore</a>
                 <a href="" class="app app__googleplay">Get it on Google Play</a>
               </div>
-              <span>
-                <a href="">Discover more</a>
-              </span>
+              <a href="" class="link__discover_more">Discover more</a>
             </div>
           </div>
         </section>
@@ -101,7 +95,7 @@
                 <li>No monthly cash commission</li>
                 <li>Manage payments and transactions online</li>
               </ul>
-              <a href="" class="button button__learn-more">Learn more</a>
+              <a href="" class="button button__learn_more">Learn more</a>
             </div>
             <div class="container__receive_payment">
               <h2>Receive payment from international bank details</h2>
@@ -109,7 +103,7 @@
                 <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
                 <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
               </div>
-              <a href="" class="button button__learn-more">Learn more</a>
+              <a href="" class="button button__learn_more">Learn more</a>
             </div>
           </div>
         </section>
