--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment" />
-    <link rel="stylesheet" href="css/desktop.css">
+    <link rel="stylesheet" href="css/global.css">
     <title>Silicon</title>
   </head>
   <body>
@@ -29,7 +29,7 @@
 
         <main>
           <section id="section-01">
-            <div class="s1">
+            <div class="s01">
               <h1>Manage All Your Money in One App</h1>
               <p>We offer you a new generation of the mobile banking. <br />Save, spend & manage money in your pocket.</p>
               <div id="download">
@@ -41,8 +41,8 @@
           </section>
 
           <section id="section-02">
-            <div>
-              <div class="container client__logo">
+            <div id="s02-a">
+              <div class="clients">
                 <img src="assets/logoipsum-1.svg" alt="Logo of the client Logo" />
                 <img src="assets/logoipsum-2.svg" alt="Logo of the client Logoipsum" />
                 <img src="assets/logoipsum-3.svg" alt="Logo of the client Logoipsum" />
@@ -50,31 +50,35 @@
                 <img src="assets/logoipsum-5.svg" alt="Logo of the client Logoipsum" />
                 <img src="assets/logoipsum-6.svg" alt="Logo of the client Logoipsum" />
               </div>
-              <h2>App Features</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
-              <div class="features features__payments">
-                <h3>Easy Payments</h3>
-                <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo.</p>
-              </div>
-              <div class="features features__statistics">
-                <h3>Cost Statistics</h3>
-                <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
-              </div>
-              <div class="features features__cashback">
-                <h3>Regular Cashback</h3>
-                <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.</p>
-              </div>
-              <div class="features features__security">
-                <h3>Data Security</h3>
-                <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
-              </div>
-              <div class="features features__support">
-                <h3>Support 24/7</h3>
-                <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
-              </div>
-              <div class="features features__standards">
-                <h3>Top Standards</h3>
-                <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.</p>
+              <div id="s02-b">
+                <h2>App Features</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+                <div id="s02-features">
+                  <div class="features features__payments">
+                    <h3>Easy Payments</h3>
+                    <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo.</p>
+                  </div>
+                  <div class="features features__security">
+                    <h3>Data Security</h3>
+                    <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
+                  </div>
+                  <div class="features features__statistics">
+                    <h3>Cost Statistics</h3>
+                    <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
+                  </div>
+                  <div class="features features__support">
+                    <h3>Support 24/7</h3>
+                    <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
+                  </div>
+                  <div class="features features__cashback">
+                    <h3>Regular Cashback</h3>
+                    <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.</p>
+                  </div>
+                  <div class="features features__standards">
+                    <h3>Top Standards</h3>
+                    <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.</p>
+                  </div>
+                </div>
               </div>
             </div>
           </section>
